--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,26 @@
 {
   "manifest_version": 3,
+  "content_scripts": [
+    {
+      "matches": [
+        "<all_urls>"
+      ],
+      "js": [
+        "papaparse.min.js",
+        "constants.js",
+        "utils.js",
+        "variables-manager.js",
+        "data-manager.js",
+        "security-utils.js",
+        "security-logger.js",
+        "crypto-utils.js",
+        "content-utils.js",
+        "content-commands.js",
+        "content.js",
+        "ai-engine.js"
+      ]
+    }
+  ],
   "name": "GrafosAI-Autofill (Background Runner)",
   "version": "2.6.0",
   "description": "Enterprise-grade form automation with security hardening - Google Sheets integration, macros, and XPath picker",
