Hotfix v2.8.1: Fixed Logger/RateLimiter initialization issues

--- a/manifest.json
+++ b/manifest.json
@@ -8,6 +8,7 @@
       "js": [
         "papaparse.min.js",
         "constants.js",
+        "config.js",
         "logger.js",
         "rate-limiter.js",
         "utils.js",
